# inside-job

./: Cargo.toml  LICENSE  README.md  build.rs  cert.pem  key.pem
src/: cli.rs  command.rs  grammar.pest  main.rs  payload.rs  session.rs  storage.rs  web.rs
src/payload/: mod.rs  payload.ps1  payload_secure.ps1  payload_unsecure.ps1
src/templates/: payload.dd  payload_secure.ps1  payload_unsecure.ps1  persistent.ps1
