[package]
name = "insidejob"
description = "A reverseshell session manager."
authors = ["cauvmou"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= { version="^4", features=["openssl"]}
openssl = { version = "0.10" }
uuid = { version="^1", features=["v4", "fast-rng", "macro-diagnostics"]}
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "4.5.17", features = ["derive"] }
log = "0.4.22"
simple_logger = "5.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"